// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`semantic classes > handles deprecated button|input|f 2`] = `
[
  "[91m[REMOVED][0m button -> use Warp button component instead",
  "[91m[REMOVED][0m button--default -> use Warp button component instead",
  "[91m[REMOVED][0m button--secondary -> use Warp button component instead",
  "[91m[REMOVED][0m input-toggle -> use Warp input component instead",
  "[91m[REMOVED][0m input -> use Warp input component instead",
  "[91m[REMOVED][0m input--is-invalid -> use Warp input component instead",
  "[91m[REMOVED][0m f-modal-title-leave-to -> use Warp modal component instead",
  "[91m[REMOVED][0m f-slider -> use Warp slider component instead",
  "[91m[REMOVED][0m f-card-outline -> use Warp card component instead",
]
`;

exports[`semantic classes > handles deprecated button|input|f with pseudo 2`] = `
[
  "[91m[REMOVED][0m button -> use Warp button component instead",
  "[91m[REMOVED][0m button--default -> use Warp button component instead",
  "[91m[REMOVED][0m button--secondary -> use Warp button component instead",
  "[91m[REMOVED][0m input-toggle -> use Warp input component instead",
  "[91m[REMOVED][0m input -> use Warp input component instead",
  "[91m[REMOVED][0m input--is-invalid -> use Warp input component instead",
  "[91m[REMOVED][0m f-modal-title-leave-to -> use Warp modal component instead",
  "[91m[REMOVED][0m f-slider -> use Warp slider component instead",
  "[91m[REMOVED][0m f-card-outline -> use Warp card component instead",
]
`;

exports[`semantic classes > handles deprecated link with a custom message with and without pseudo 2`] = `
[
  "[91m[REMOVED][0m link -> use Warp button component instead",
  "[91m[REMOVED][0m link -> use Warp button component instead",
]
`;

exports[`semantic classes > handles deprecated segment-control|field 2`] = `
[
  "[91m[REMOVED][0m field -> use Warp form components instead",
  "[91m[REMOVED][0m field-hint -> use Warp form components instead",
  "[91m[REMOVED][0m segment-control__item -> use Warp button-group (Vue) or Toggle component instead",
  "[91m[REMOVED][0m segment-control--is-disabled -> use Warp button-group (Vue) or Toggle component instead",
  "[91m[REMOVED][0m segment-control -> use Warp button-group (Vue) or Toggle component instead",
]
`;

exports[`semantic classes > handles deprecated segment-control|field with pseudo 2`] = `
[
  "[91m[REMOVED][0m field -> use Warp form components instead",
  "[91m[REMOVED][0m segment-control__item -> use Warp button-group (Vue) or Toggle component instead",
]
`;
